# plugget-qt-maya-plugin

./: README.md  installer.mel  plugget_qt_maya_plugin.py  pyproject.toml  requirements.txt
