[build-system]
requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"


[tool.flit.metadata]
module = "plugget_maya"
author = "Hannes"
# author-email = "your.email@example.com"
home-page = "https://github.com/hannesdelbeke/plugget-maya-plugin"
description = "expose plugget as a maya plugin"


[tool.setuptools]
py_modules = ["plugget_qt_maya_plugin"]



# todo cleanup, has only a single py file not a module
[project]
name = "plugget_qt_maya_plugin"
authors = [
    {name = "Hannes"},
]
description = "a Maya plugin to load the UI for Plugget (Qt)"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["maya", "plugin"]
# license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"', "plugget-qt"
]
# dynamic = ["version"]
version = "0.0.1"

# [project.optional-dependencies]
# yaml = ["pyyaml"]

# [project.scripts]
# my-script = "my_package.module:function"

[project.urls]
Homepage = "https://github.com/hannesdelbeke/plugget-qt-maya-plugin"
